infra/uds-bundles/uds-bundles/PER_BUNDLE/rosie/manifests/virtualservice.yaml
# Copyright 2026 SZL Holdings — SPDX-License-Identifier: Apache-2.0
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rosie
  namespace: rosie
spec:
  hosts:
    - "rosie.uds.dev"
  gateways:
    - istio-tenant-gateway/tenant
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: rosie.rosie.svc.cluster.local
            port:
              number: 8080
