infra/uds-bundles/uds-bundles/PER_BUNDLE/rosie/manifests/networkpolicy.yaml
# Copyright 2026 SZL Holdings — SPDX-License-Identifier: Apache-2.0
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rosie-egress
  namespace: rosie
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: rosie
  policyTypes: ["Egress"]
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: szl-receipts
      ports:
        - protocol: TCP
          port: 8443
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
